--- a/Job/templates/job/job_detail.html
+++ b/Job/templates/job/job_detail.html
@@ -1,1 +1,8 @@
 <h1>job detail</h1>
+
+
+<h3>{{job.title}}</h3>
+<h4>{{job.descriptions}}</h4>
+<h5>published at :{{job.published_at}}</h5>
+
+<p>{{job.vacancy}} Positions</p>
