add Urls direct

--- a/Accounts/templates/registration/login.html
+++ b/Accounts/templates/registration/login.html
@@ -2,7 +2,10 @@
 {% load bootstrap4 %}
 
 {% block content %}
-
+                <div class="col-xl-12">
+                    <div class="bradcam_text">
+                        <h3>login</h3>
+                    </div>
   {% if form.errors %}
     <p>Your username and password didn't match. Please try again.</p>
   {% endif %}
