Add Home Urls & Add Contact us fetaurs

--- a/Accounts/templates/registration/login.html
+++ b/Accounts/templates/registration/login.html
@@ -24,7 +24,7 @@
     {% bootstrap_form form %}
 
       
-    <button class="boxed-btn3 w-100" type="submit">login</button>
+    <button class="boxed-btn3 w-100" href="accounts:profile" type="submit">login</button>
     <input type="hidden" name="next" value="{{ next }}" />
   </form>
   
