--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 <!doctype html>
 <html class="no-js" lang="zxx">
 
@@ -14,19 +14,19 @@
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
-    <link rel="stylesheet" href="{% staticfiles 'css/bootstrap.min.css' %} ">
-    <link rel="stylesheet" href="{% staticfiles 'css/owl.carousel.min.css' %} ">
-    <link rel="stylesheet" href="{% staticfiles 'css/magnific-popup.css' %} ">
-    <link rel="stylesheet" href="{% staticfiles 'css/font-awesome.min.css' %} ">
-    <link rel="stylesheet" href="{% staticfiles 'css/themify-icons.css' %} ">
-    <link rel="stylesheet" href="{% staticfiles 'css/nice-select.css' %} ">
-    <link rel="stylesheet" href="{% staticfiles 'css/flaticon.css' %} ">
-    <link rel="stylesheet" href="{% staticfiles 'css/jquery-ui.css' %} ">
-    <link rel="stylesheet" href="{% staticfiles 'css/gijgo.css' %} ">
-    <link rel="stylesheet" href="{% staticfiles 'css/animate.min.css' %} ">
-    <link rel="stylesheet" href="{% staticfiles 'css/slicknav.css' %} ">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %} ">
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %} ">
+    <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %} ">
+    <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %} ">
+    <link rel="stylesheet" href="{% static 'css/themify-icons.css' %} ">
+    <link rel="stylesheet" href="{% static 'css/nice-select.css' %} ">
+    <link rel="stylesheet" href="{% static 'css/flaticon.css' %} ">
+    <link rel="stylesheet" href="{% static 'css/jquery-ui.css' %} ">
+    <link rel="stylesheet" href="{% static 'css/gijgo.css' %} ">
+    <link rel="stylesheet" href="{% static 'css/animate.min.css' %} ">
+    <link rel="stylesheet" href="{% static 'css/slicknav.css' %} ">
 
-    <link rel="stylesheet" href="{% staticfiles 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
@@ -209,37 +209,37 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
     <!-- link that opens popup -->
     <!-- JS here -->
-    <script src="{% staticfiles 'js/vendor/modernizr-3.5.0.min.js' %}"></script>
-    <script src="{% staticfiles 'js/vendor/jquery-1.12.4.min.js' %}"></script>
-    <script src="{% staticfiles 'js/popper.min.js' %}"></script>
-    <script src="{% staticfiles 'js/bootstrap.min.js' %}"></script>
-    <script src="{% staticfiles 'js/owl.carousel.min.js' %}"></script>
-    <script src="{% staticfiles 'js/isotope.pkgd.min.js' %}"></script>
-    <script src="{% staticfiles 'js/ajax-form.js' %}"></script>
-    <script src="{% staticfiles 'js/waypoints.min.js' %}"></script>
-    <script src="{% staticfiles 'js/jquery.counterup.min.js' %}"></script>
-    <script src="{% staticfiles 'js/imagesloaded.pkgd.min.js' %}"></script>
-    <script src="{% staticfiles 'js/scrollIt.js' %}"></script>
-    <script src="{% staticfiles 'js/jquery.scrollUp.min.js' %}"></script>
-    <script src="{% staticfiles 'js/wow.min.js' %}"></script>
-    <script src="{% staticfiles 'js/nice-select.min.js' %}"></script>
-    <script src="{% staticfiles 'js/jquery.slicknav.min.js' %}"></script>
-    <script src="{% staticfiles 'js/jquery.magnific-popup.min.js' %}"></script>
-    <script src="{% staticfiles 'js/plugins.js' %}"></script>
-    <!-- <script src="{% staticfiles 'js/gijgo.min.js' %}"></script> -->
-    <script src="{% staticfiles 'js/range.js' %}"></script>
+    <script src="{% static 'js/vendor/modernizr-3.5.0.min.js' %}"></script>
+    <script src="{% static 'js/vendor/jquery-1.12.4.min.js' %}"></script>
+    <script src="{% static 'js/popper.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'js/isotope.pkgd.min.js' %}"></script>
+    <script src="{% static 'js/ajax-form.js' %}"></script>
+    <script src="{% static 'js/waypoints.min.js' %}"></script>
+    <script src="{% static 'js/jquery.counterup.min.js' %}"></script>
+    <script src="{% static 'js/imagesloaded.pkgd.min.js' %}"></script>
+    <script src="{% static 'js/scrollIt.js' %}"></script>
+    <script src="{% static 'js/jquery.scrollUp.min.js' %}"></script>
+    <script src="{% static 'js/wow.min.js' %}"></script>
+    <script src="{% static 'js/nice-select.min.js' %}"></script>
+    <script src="{% static 'js/jquery.slicknav.min.js' %}"></script>
+    <script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
+    <script src="{% static 'js/plugins.js' %}"></script>
+    <!-- <script src="{% static 'js/gijgo.min.js' %}"></script> -->
+    <script src="{% static 'js/range.js' %}"></script>
 
 
 
     <!--contact js-->
-    <script src="{% staticfiles 'js/contact.js' %}"></script>
-    <script src="{% staticfiles 'js/jquery.ajaxchimp.min.js' %}"></script>
-    <script src="{% staticfiles 'js/jquery.form.js' %}"></script>
-    <script src="{% staticfiles 'js/jquery.validate.min.js' %}"></script>
-    <script src="{% staticfiles 'js/mail-script.js' %}"></script>
+    <script src="{% static 'js/contact.js' %}"></script>
+    <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
+    <script src="{% static 'js/jquery.form.js' %}"></script>
+    <script src="{% static 'js/jquery.validate.min.js' %}"></script>
+    <script src="{% static 'js/mail-script.js' %}"></script>
 
 
-    <script src="{% staticfiles 'js/main.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
 
 
 	<script>
